fix: fix spacing in pagination component (#589)

--- a/packages/components/src/lab/pagination/Pagination.less
+++ b/packages/components/src/lab/pagination/Pagination.less
@@ -1,7 +1,7 @@
 .tw-pagination {
   display: inline-block;
   padding-left: 0;
-  margin-bottom: var(--space-24);
+  margin-bottom: var(--size-24);
 
   li {
     display: inline; // Remove list-style and block-level defaults
@@ -9,6 +9,7 @@
     &:first-child > a {
       margin-left: 0;
     }
+
     &:last-child > a {
       margin-right: 0;
     }
@@ -16,11 +17,11 @@
 
   a {
     float: left; // Collapse white-space
-    line-height: var(--space-48);
+    line-height: var(--size-48);
     text-decoration: none;
     color: var(--color-text-primary);
-    margin: 0 var(--space-4);
-    width: var(--space-48);
+    margin: 0 var(--size-4);
+    width: var(--size-48);
     text-align: center;
     border-radius: 50%;
     font-weight: normal;
@@ -44,6 +45,6 @@
   }
 
   svg {
-    margin: var(--space-16);
+    margin: var(--size-16);
   }
 }
